Package: aroma.core
===================

Version: 2.6.7 [2012-10-21]
o Now CopyNumberChromosomalModel() accepts references of type
  "none", "constant(1)", "constant(2)", and "median", where "none"
  and "constant(1)" are identical, "constant(2)" uses reference signals
  that are exactly 2, and "median" uses reference signals are equals
  the robust average across all samples.  For backward compatibility,
  NULL is still supported, which equals "median".
o ROBUSTNESS: Now using Arguments$getWritablePath() everywhere instead
  of mkdirs(), because the former will do a better job in creating
  and asserting directories on slow shared file systems, and when it
  fails it gives a more informative error message.


Version: 2.6.6 [2012-10-18]
o It is no longer possible to have different *versions* of ArrayExplorer
  and ChromosomeExplorer under the same reports/ directory structure.
  If you wish to keep old Explorer reports, rename those reports/ 
  root directories.
o ROBUSTNESS/BUG FIX: Some of the HTML and CSS errors in ArrayExplorer
  and ChromosomeExplorer that was detected by the W3's online validation 
  services were correct.  New versions are ArrayExplorer v3.5 and
  ChromosomeExplorer v3.5.
o BUG FIX: A few errors in the Javascript of ArrayExplorer has been
  corrected. Thanks Laurent Malvert (ID Business Solutions Ltd; IDBS)
  for reporting and troubleshooting on this.


Version: 2.6.5 [2012-10-17]
o ROBUSTNESS: Now all static Object methods that calls "next" methods,
  utilizes NextMethod(), which became possible with R.oo v1.10.0.


Version: 2.6.4 [2012-10-16]
o ROBUSTNESS/BUG FIX: No longer passing '...' to NextMethod(), cf.
  R-devel thread 'Do *not* pass '...' to NextMethod() - it'll do it 
  for you; missing documentation, a bug or just me?' on Oct 16, 2012.


Version: 2.6.3 [2012-10-14]
o Added AromaUnitGcContentFile (from aroma.affymetrix).
o CLEANUP: Removed several defunct/obsolete methods and made
  deprecated methods defunct/obsolete. 

